@@ -1,5 +1,9 @@
 2005-03-23 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/canna_jrkanji.h: Moved translate_key_event() to private field.
+
+2005-03-23 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/canna_jrkanji.cpp: Fixed odd behavior on symbols mode.
 	* po/ja.po: Updated.
 
